fixed z-index of home image

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -24,23 +24,23 @@
 .block2 div {
   font-size: 20px;
 }
-
+/* TODO fix grid layout */
 @media (min-width: 768px) {
   .block1,
   .block2 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 50%;
-    grid-template-areas: '.image';
+    grid-template-rows: 100%;
+    grid-template-areas: 'image';
   }
   .image {
     /* width: 50%; */
     /* grid-column: 2, 3;
     grid-row: 1, 3; */
-    grid-area: img;
+  }
+  .imageWrapper {
+    grid-area: image;
     z-index: 0;
-
-    border-radius: 0;
   }
   .shout,
   .flash {
@@ -49,7 +49,7 @@
   .shout {
     /* grid-column: 1, 2;
     grid-row: 1, 2; */
-    grid-area: img;
+    grid-area: image;
     z-index: 1;
 
     margin: 1em auto auto 1em;
@@ -59,7 +59,7 @@
   .dish {
     /* grid-column: 1, 2;
     grid-row: 2, 3; */
-    grid-area: img;
+    grid-area: image;
     z-index: 1;
     width: 400px;
 
